# openmanus

./: .ai.json  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: README.md
docs/00-overview/: README.md  architecture.md  roadmap.md
docs/01-agents/: README.md  agent-contract.md
docs/02-orchestration/: README.md  dag-scheduler.md  execution-flow.md  step-lifecycle.md
docs/03-resources/: README.md  lease-manager.md  resource-cleanup.md  resource-pool.md
docs/04-memory/: README.md  memory-config.md  memory-lifecycle.md  memory-retrieval.md  memory-types.md
docs/05-negotiation/: README.md  negotiation-config.md  negotiator-agent.md
docs/06-verification/: README.md  adversarial-mode.md  verification-config.md  voting-mode.md
docs/07-llm/: README.md
docs/08-evidence/: README.md
docs/09-security/: README.md
docs/10-observability/: README.md
docs/11-contracts/: README.md
docs/11-contracts/api-contracts/: openapi.yaml
docs/12-optimization/: README.md
docs/99-appendix/: module-dependencies.md  naming-conventions.md  original-design-plan.md
src/openmanus/: __init__.py
src/openmanus/config/: __init__.py  defaults.yaml  settings.py
src/openmanus/core/: __init__.py  exceptions.py  types.py
src/openmanus/core/contracts/: __init__.py  agent_call.py  agent_result.py  evidence.py  lease.py  step.py  task.py
src/openmanus/core/events/: __init__.py  base.py  step_events.py  task_events.py
src/openmanus/core/interfaces/: __init__.py  agent.py  event_bus.py  lease_manager.py  repository.py  scheduler.py
src/openmanus/llm/: __init__.py  cache.py  cost_tracker.py  health.py  model_registry.py  policy_engine.py  rate_limiter.py  router.py  tracing.py
src/openmanus/llm/adapters/: __init__.py  base.py  litellm_adapter.py  types.py
tests/unit/llm/: __init__.py  test_cache.py  test_litellm_adapter.py  test_rate_limiter.py
