[project]
name = "openmanus"
version = "0.1.0"
description = "AgentScope-based multi-agent execution platform"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "OpenManus Team" }]
keywords = ["agents", "multi-agent", "orchestration", "dag", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # 核心框架
    "agentscope>=0.0.5",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # API 层
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",

    # 数据库
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.0",
    "redis>=5.0.0",

    # LLM 集成
    "litellm>=1.17.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",

    # 可观测性
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",

    # 存储
    "aioboto3>=12.3.0",

    # 消息队列
    "aiokafka>=0.10.0",

    # 工具
    "httpx>=0.26.0",
    "pyyaml>=6.0.1",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.96.0",
    "mypy>=1.8.0",
    "ruff>=0.1.14",
    "pre-commit>=3.6.0",
    "types-redis>=4.6.0",
    "types-PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/openmanus/openmanus"
Documentation = "https://openmanus.readthedocs.io"
Repository = "https://github.com/openmanus/openmanus"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openmanus"]

# ============================================================================
# Ruff 配置 - 代码检查和格式化
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["openmanus"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG001", "S101"]

# ============================================================================
# MyPy 配置 - 类型检查
# ============================================================================
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "agentscope.*",
    "litellm.*",
    "aiokafka.*",
    "aioboto3.*",
    "grpc.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ============================================================================
# Pytest 配置
# ============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]

# ============================================================================
# Coverage 配置
# ============================================================================
[tool.coverage.run]
source = ["src/openmanus"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
